# agentos-pmqs

./: .gitignore  AGENTS.md  LICENSE  README.md  agentOS.yaml  field-bindings.json
docs/: README.md  (+19 more)
pmqs/: .env.example  .gitignore  README.md  pyproject.toml
pmqs/pmqs/: __init__.py  agentos_client.py  config.py  context_feed.py  db.py  dedup.py  framing.py  lenses.py  llm.py  members.py  models.py  pipeline.py  position_doc.py  products.py  refresh.py  repository.py  research.py  resolve.py  retrieval.py  scoring.py  settings.py  warroom.py
pmqs/pmqs/api/: __init__.py  app.py  brand.py  inbox.py  login.py  news.py  outcomes.py  product_form.py  products.py  settings.py  workspace.py
pmqs/tests/: conftest.py  test_add_product.py  test_add_product_optional_repo.py  test_add_product_persist.py  test_add_product_research_ui.py  test_api_news.py  test_api_products.py  test_api_promote.py  test_api_workspace.py  test_api_workspace_list.py  test_artifact_tabs.py  test_brand_doc.py  test_ci_workflow.py  test_close_the_loop.py  test_context_feed.py  test_contrast.py  test_convo_thread.py  test_dedup.py  test_events.py  test_inbox_two_pane.py  test_lens_weights.py  test_lenses.py  test_live_ledger.py  test_llm.py  test_login.py  test_logo.py  test_markdown.py  test_members.py  test_membership_backfill.py  test_nav_create.py  test_news_fetch.py  test_news_relevance.py  test_news_store.py  test_no_hazard.py  test_optional_repo_schema.py  test_optional_repo_ui.py  test_outcome_authorship_backfill.py  test_outcome_draft.py  test_outcome_export.py  test_outcome_lifecycle.py  (+43 more)
(+35 files in other folders)
